# omid

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  architecture.md  build.rs  dev_manual.md  diagram.md  manual.md
.github/workflows/: ci.yml
bindings/cpp/: omid.hpp
bindings/csharp/: Omid.cs
bindings/dart/: omid.dart
bindings/go/omid/: omid.go
bindings/java/: Omid.java
bindings/kotlin/: Omid.kt
bindings/python/: omid.py
bindings/typescript/: omid.ts
bindings/web/: omid_web.js
docs/: architecture.md  dev_manual.md  diagram.md  llm_context.xml  manual.md  porting_guide.md  spec_vs_midi2.md
drivers/linux-gadget/: setup_gadget.sh
drivers/windows/: OmidWinUsb.inf
include/: omid.h
src/: dispatcher.rs  driver.rs  error.rs  event.rs  ffi.rs  lib.rs  midi.rs  packet.rs  queue.rs  topology.rs  uact.rs
